--- a/INDEX.CSS
+++ b/INDEX.CSS
@@ -1,6 +1,14 @@
 body {
     color:white
     background-color: black
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    align-items: center;
+    padding: 16px;
 }
 
