--- a/INDEX.CSS
+++ b/INDEX.CSS
@@ -1,6 +1,6 @@
 body {
-    color:white
-    background-color: black
+    color: white;
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -12,3 +12,8 @@ ul {
     padding: 16px;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+
+}
